# OpenManusLite

./: .gitignore  README.md  poetry.toml  pyproject.toml
openmanuslite/: llm.py  logger.py  schema.py
openmanuslite/agent/: base.py  planning.py  react.py  toolcall.py
openmanuslite/config/: base.py  config.example.yaml  config.py
openmanuslite/flow/: base.py  flow_factory.py
openmanuslite/prompts/: toolcall.py
openmanuslite/tools/: __init__.py  create_chat_completion.py  planning.py  pyexec.py  tool_collection.py
tests/: llm_test.py  manus_test.py  planning_tool_openai_test.py  planning_tool_test.py  pycode_exec_test.py  run_flow_test.py  test.py
