[tool.poetry]
name = "openmanuslite"
version = "0.0.1"
description = "OpenManusLite is a streamlined version of the OpenManus project, retaining only its most essential functional modules. This project provides a lightweight platform for developers to study, understand, and extend the core features of OpenManus."
authors = ["Stubblef <tsing967@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.115.12"
openai = "^1.70.0"
loguru = "^0.7.3"
hyperpyyaml = "^1.2.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
